--- a/src/UI/CustomerPanels/CustomerJFrame.form
+++ b/src/UI/CustomerPanels/CustomerJFrame.form
@@ -52,12 +52,16 @@
                                       <EmptySpace min="-2" pref="377" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="lblCustomer" min="-2" pref="130" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                           <Group type="102" attributes="0">
                                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                                               <Component id="branchComboBox" min="-2" pref="130" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="32767" attributes="0"/>
+                                              <Component id="lblCustomer" min="-2" pref="130" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace max="32767" attributes="0"/>
@@ -95,6 +99,7 @@
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="lblCustomer" min="-2" pref="23" max="-2" attributes="0"/>
+                      <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -175,7 +180,7 @@
             <Component class="javax.swing.JTable" name="customerBookTbl">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="4">
+                  <Table columnCount="4" rowCount="0">
                     <Column editable="true" title="BOOK NAME" type="java.lang.Object"/>
                     <Column editable="true" title="AUTHOR" type="java.lang.Object"/>
                     <Column editable="true" title="SERIAL NUMBER" type="java.lang.Object"/>
@@ -223,7 +228,7 @@
             <Component class="javax.swing.JTable" name="customerMagTbl">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="4">
+                  <Table columnCount="5" rowCount="0">
                     <Column editable="true" title="MAGAZINE NAME" type="java.lang.Object"/>
                     <Column editable="true" title="ISSUE TYPE" type="java.lang.Object"/>
                     <Column editable="true" title="SERIAL NUMBER" type="java.lang.Object"/>
@@ -293,7 +298,7 @@
             <Component class="javax.swing.JTable" name="rentedTbl">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="4">
+                  <Table columnCount="3" rowCount="0">
                     <Column editable="true" title="MATERIAL NAME" type="java.lang.Object"/>
                     <Column editable="true" title="RENTAL ID" type="java.lang.Object"/>
                     <Column editable="true" title="RENTAL STATUS" type="java.lang.Object"/>
@@ -371,6 +376,14 @@
               <Font name="Helvetica Neue" size="15" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="RENTED MATERIALS:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel6">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Helvetica Neue" size="15" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="USERNAME:"/>
           </Properties>
         </Component>
       </SubComponents>
