--- a/src/UI/Librarian/LibrarianJFrame.form
+++ b/src/UI/Librarian/LibrarianJFrame.form
@@ -433,9 +433,10 @@
         <Component class="javax.swing.JTable" name="rentalTbl">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="0">
-                <Column editable="true" title="MATERIAL NAME" type="java.lang.Object"/>
+              <Table columnCount="6" rowCount="0">
+                <Column editable="true" title="BOOK NAME" type="java.lang.Object"/>
                 <Column editable="true" title="RENTAL ID" type="java.lang.Object"/>
+                <Column editable="true" title="MAGAZINE NAME" type="java.lang.Object"/>
                 <Column editable="true" title="PRICE" type="java.lang.Object"/>
                 <Column editable="true" title="DURATION" type="java.lang.Object"/>
                 <Column editable="true" title="AVAILABILITY STATUS" type="java.lang.Object"/>
@@ -443,6 +444,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -549,9 +555,7 @@
     <Component class="javax.swing.JComboBox" name="genreCB">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
-            <StringItem index="0" value=" "/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -630,6 +634,19 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="950" y="260" width="-1" height="-1"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel9">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Helvetica Neue" size="21" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="LIBRARIAN"/>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="680" y="20" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
